background white space on scroll fix

--- a/app/static/assets/style/contactsStyle.css
+++ b/app/static/assets/style/contactsStyle.css
@@ -17,14 +17,16 @@
 
 /* * =============== Page Format =============== * */
 /* ===== Background Styling ===== */
-.main {
-  position: absolute;
-  height: 100%;
+body {
   width: 100%;
-  /* Gif Image "https://www.youtube.com/watch?v=JEGoUAfnJp0"*/
-  background: rgba(0, 0, 0, 0.8) url(../img/stock/neon-drive.gif) no-repeat center;
+  height: 100vh;
+
+  /* GIF Image "https://www.youtube.com/watch?v=JEGoUAfnJp0"*/
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1)), url(../img/stock/neon-drive.gif), repeat-y, center, fixed;
   background-blend-mode: multiply;
-  background-size: cover;
+  background-size: 100% 100%;
+  animation: fadeIn 1s ease-out;
+  animation-fill-mode: forwards;
 }
 
 /* ===== Text Styling ===== */
